assets/css/style.css
/* ... */
@media screen and (max-width: 370px) {
  #exampleModalxpand .msoinvestproduct_box_right_p2 h3 a {
    width: 50px;
  }
}

#exampleModal2 .modal-dialog {
  bottom: 0;
}

#exampleModal3 .modal-content,
#exampleModal3 .modal-body {
  border-top-left-radius: 14px !important;
  border-top-right-radius: 14px !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

@media screen and (max-width: 768px) {
  #exampleModal3 .modal-content,
  #exampleModal3 .modal-body {
    border-top-left-radius: 0 !important;
    border-top-right-radius: 0 !important;
  }

  #exampleModal3 .modal-body .makepaymentmodel_p1_s5 {
    max-width: 100px;
  }
}

@media screen and (max-width: 575px) {
}

@media screen and (max-width: 1919px) and (min-width: 576px) {
  #exampleModal3 .modal-body {
    height: calc(100vh - 120px);
  }
}
/* 
@media screen and (max-width: 768px) {
  .makepaymentmodel_p1,
  .makepaymentmodel_p1_s6 {
    margin-top: 5rem;
  }

  .makepaymentmodel_p1_s7 {
    margin-top: calc(40px + 5rem);
  }
} */

@media screen and (max-width: 575px) {
  .msomoderate_box {
    width: calc(100% - 28px);
    justify-content: center;
    padding: 2rem 0;
  }

  .msomoderate_box.step1 label {
    transform: translateX(10px);
  }
}

@media screen and (max-width: 768px) and (min-width: 520px) {
  .msomobilestatics .msomobilestatics_p2 {
    width: 162px !important;
  }

  .msomobilestatics input {
    font-size: 40px !important;
    width: 190px !important;
    height: 46px !important;
  }

  .msomobilestatics_p3 {
    width: 158px;
  }

  .msomobilestatics_p1 input {
    width: calc(100% + 24px) !important;
  }

  #monthly-input-box {
    width: 100% !important;
  }
}

#car-card {
  position: relative;
}

#car-card #add {
  border: 0;
  background-color: transparent;
  position: absolute;
  left: 0;
  bottom: -15px;
  transform: rotate(45deg);
}

@media screen and (max-width: 767px) {
  #car-card #add {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  #exampleModal1 .modal-body {
    margin-top: 93px;
    overflow: auto;
  }

  #exampleModal1 .msoaddfinaplan {
    padding: 3rem 0;
    max-height: calc(100%);
  }
}

@media screen and (max-width: 340px) {
  .msochartdata {
    width: 96%;
    overflow-x: hidden;
  }
  .msochartdata > * {
    width: 96%;
  }
}

#exampleModal4 .modal-dialog {
  left: 50% !important;
  transform: translateX(-50%) !important;
  top: unset !important;
}

#exampleModal4 .modal-dialog .modal-content {
  bottom: unset !important;
  border-radius: 14px;
  min-height: unset !important;
}

#exampleModal4 .modal-dialog .modal-body {
  border-radius: 14px;
}

#exampleModal4.modal .modal-dialog {
  max-height: 288px !important;
  min-height: 288px !important;
  bottom: unset !important;
}

#exampleModal4.modal .modal-dialog .modal-content {
  height: 100%;
}

@media screen and (max-width: 1023px) {
  #exampleModal4.modal .modal-dialog {
    border-radius: 14px;
  }
}

@media screen and (max-width: 768px) {
  #exampleModal4.modal .modal-dialog {
    width: 90% !important;
    border-radius: 14px;
  }
}

@media screen and (max-width: 575px) {
  /* #exampleModal4.modal .modal-dialog {
    width: 100% !important;
    max-height: 288px;
    top: 0 !important;
  } */

  #exampleModal4 .paymentsus_box h3 {
    font-size: 24px;
  }
}

@media screen and (max-width: 1023px) {
  #exampleModal3 .close {
    top: 2.25rem;
    right: 2rem;
  }

  .makepaymentmodel_p1_up.dn h3 {
    position: relative;
    padding-bottom: 1rem;
    margin-bottom: 3rem;
  }

  .makepaymentmodel_p1_up.dn h3::after {
    content: "";
    position: absolute;
    height: 1px;
    border-bottom: 1px solid #e6e6e6;
    bottom: -1rem;
    left: -25px;
    right: -25px;
    width: 100vw;
  }

  .makepaymentmodel {
    max-width: 100%;
  }

  .makepaymentmodel_p1 {
  }

  .makepaymentmodel_p1_s7_p2 {
    width: 80%;
    margin-left: auto;
  }
}

@media screen and (max-width: 1023px) and (min-width: 769px) {
  .makepaymentmodel_p1_s7_p2_left h6,
  .makepaymentmodel_p1_s7_p2_right h6 {
    font-size: 20px;
  }

  .makepaymentmodel_p1_s7_p2_left h3,
  .makepaymentmodel_p1_s7_p2_right .md-form h3 {
    font-size: 44px;
    margin-top: 1rem;
  }

  .makepaymentmodel_p1_s7_p2_right .md-form {
    width: 180px;
  }

  .makepaymentmodel_p1_s7 {
    margin-top: 120px;
  }

  .makepaymentmodel_p1_s6 {
    top: 370px;
  }
}

@media screen and (max-width: 768px) {
  .makepaymentmodel_p1_s7 {
    margin-top: 5rem;
  }

  .makepaymentmodel_p1_s6 {
    top: 321px;
  }

  #exampleModal3 .close {
    top: 1.5rem;
  }
}

@media screen and (max-width: 575px) {
  .makepaymentmodel_p1_s6 {
    top: 321px;
  }
  .makepaymentmodel_p1_s7 {
    /* padding-top: 5rem; */
  }
}

#exampleModal4 .modal-dialog {
  width: 528px !important;
}

#exampleModal4 .modal-content,
#exampleModal4 .modal-body {
  border-radius: 14px !important;
}

@media screen and (min-width: 1920px) and (max-width: 2919px) {
  #exampleModal4 .modal-body {
    padding: unset !important;
    height: unset !important;
  }
  #exampleModal4 .modal-content {
    height: 100% !important;
  }
}

@media screen and (max-width: 1023px) {
  .makepaymentmodel_p1_s1 {
    max-width: 190px;
  }

  .makepaymentmodel_p1_s5 {
    max-width: 160px;
  }
}
/* ... */

